# codec

./: Cargo.toml  build.rs
efl-sys/: Cargo.toml  build.rs
efl-sys/src/: efl.c  efl.h  lib.rs
src/: core.rs  main.rs  room.rs  serde_types.in.rs
src/ui/: login.rs
