[package]
name = "codec"
version = "0.1.0"
authors = ["indefini <chris@indefini.org>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
hyper = "*"
url = "*"
rustc-serialize = "*"
json = "*"
rscam = "*"
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_json = "0.8"
libc = "*"
chrono = "*"
xdg = "2.0.0"

[dependencies.efl-sys]
path = "efl-sys"
